src/test/ui/macros/macro-at-most-once-rep-2018-feature-gate.stderr
error[E0658]: using the `?` macro Kleene operator for "at most one" repetition is unstable (see issue #48075)
  --> $DIR/macro-at-most-once-rep-2018-feature-gate.rs:7:10
   |
LL |     ($(a)?) => {}
   |          ^
   |
   = help: add #![feature(macro_at_most_once_rep)] to the crate attributes to enable

error: expected `*` or `+`
  --> $DIR/macro-at-most-once-rep-2018-feature-gate.rs:7:10
   |
LL |     ($(a)?) => {}
   |          ^

error: expected `*` or `+`
  --> $DIR/macro-at-most-once-rep-2018-feature-gate.rs:13:11
   |
LL |     ($(a),?) => {} //~ERROR expected `*` or `+`
   |           ^
   |
   = note: `?` is not a macro repetition operator

error[E0658]: using the `?` macro Kleene operator for "at most one" repetition is unstable (see issue #48075)
  --> $DIR/macro-at-most-once-rep-2018-feature-gate.rs:17:10
   |
LL |     ($(a)?+) => {}
   |          ^
   |
   = help: add #![feature(macro_at_most_once_rep)] to the crate attributes to enable

error: expected `*` or `+`
  --> $DIR/macro-at-most-once-rep-2018-feature-gate.rs:17:10
   |
LL |     ($(a)?+) => {}
   |          ^

error[E0658]: using the `?` macro Kleene operator for "at most one" repetition is unstable (see issue #48075)
  --> $DIR/macro-at-most-once-rep-2018-feature-gate.rs:23:10
   |
LL |     ($(a)?*) => {}
   |          ^
   |
   = help: add #![feature(macro_at_most_once_rep)] to the crate attributes to enable

error: expected `*` or `+`
  --> $DIR/macro-at-most-once-rep-2018-feature-gate.rs:23:10
   |
LL |     ($(a)?*) => {}
   |          ^

error: no rules expected the token `?`
  --> $DIR/macro-at-most-once-rep-2018-feature-gate.rs:31:11
   |
LL |     foo!(a?); //~ ERROR no rules expected the token `?`
   |           ^

error: no rules expected the token `?`
  --> $DIR/macro-at-most-once-rep-2018-feature-gate.rs:32:11
   |
LL |     foo!(a?a); //~ ERROR no rules expected the token `?`
   |           ^

error: no rules expected the token `?`
  --> $DIR/macro-at-most-once-rep-2018-feature-gate.rs:33:11
   |
LL |     foo!(a?a?a); //~ ERROR no rules expected the token `?`
   |           ^

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0658`.
